--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fire</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="https://blazed.sirv.com/logo/Beaker-Rainbow.png">
+  <link rel="apple-touch-icon" href="https://blazed.sirv.com/logo/Beaker-Rainbow.png?w=192&h=192">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <link rel="me" href="mailto:hello@blazed.space">
+  <link rel="dns-prefetch" href="//blazed.sirv.com/">
+  <link rel="preconnect" href="https://blazed.sirv.com/">
+  <title>
+    Fire Angular
+  </title>
+  <meta name="theme-color" content="#515152">
+  <meta name="application-name" content="Fire Angular">
+  <meta name="robots" content="index,follow">
+  <meta name="googlebot" content="index,follow">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 </head>
 <body>
   <app-root></app-root>
